fix bug darkmode and scrollbar

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -78,6 +78,7 @@
   text-align: center;
   color: var(--light-grey-075);
   background-color: var(--white-btn-app);
+  transition: all 400ms cubic-bezier(0.65, 0, 0.35, 1) 0s;
   white-space: nowrap;
   font-size: 14px;
 
@@ -101,7 +102,7 @@
   color: var(--primary);
   border-color: currentColor;
   background-color: var(--white-btn-follow);
-
+  transition: all 400ms cubic-bezier(0.65, 0, 0.35, 1) 0s;
   &:hover {
     border-color: var(--primary);
     background-color: rgba(254, 44, 85, 0.06);
