--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -245,21 +245,22 @@ table {
 
 html {
   font-size: 62.5%;
+  background-color: var(--white-content); /* color of the tracking area */
+  transition: all 400ms cubic-bezier(0.65, 0, 0.35, 1) 0s;
+}
+html:focus-within {
+  scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+  width: 8px; /* width of the entire scrollbar */
 }
 
-html *::-webkit-scrollbar {
-  border-radius: 0;
-  width: 8px;
+html::-webkit-scrollbar-track {
+  background-color: inherit; /* color of the tracking area */
 }
-
-html *::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: var(--light-thumb-scrollbar);
-}
-
-html *::-webkit-scrollbar-track {
-  border-radius: 0;
-  background-color: #00000000;
+html::-webkit-scrollbar-thumb {
+  background-color: var(--light-bg-search); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
 }
 
 // html *::-webkit-scrollbar {
@@ -281,11 +282,17 @@ html *::-webkit-scrollbar-track {
 //   background-color: rgba(0, 0, 0, 0);
 // }
 
-body {
+html body {
   overflow-y: overlay;
+}
+
+body {
+  overflow-x: hidden;
   font-family: var(--font-family);
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+  overscroll-behavior: contain;
+  -webkit-font-smoothing: antialiased;
 }
 
 //Font emmbeded
