--- a/src/components/Loadings/HomeAccountLoading/HomeAccountLoading.module.scss
+++ b/src/components/Loadings/HomeAccountLoading/HomeAccountLoading.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin-left: -120px;
   padding-top: 20px;
+  height: 631px;
 }
 .avatar {
   border-radius: 50%;
