--- a/src/components/Tippy/TippyShare.module.scss
+++ b/src/components/Tippy/TippyShare.module.scss
@@ -35,7 +35,17 @@
   max-height: 448px;
   overflow: overlay;
 }
+::-webkit-scrollbar {
+  width: 8px; /* width of the entire scrollbar */
+}
 
+::-webkit-scrollbar-track {
+  background-color: inherit; /* color of the tracking area */
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--light-bg-search); /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+}
 .item-wrapper {
   display: flex;
   align-items: center;
